--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,19 @@
-*.pdf
-*.jpg
-*.jpeg
-*.png
-*.bmp
-*.log
-*.tmp
-*.mp4
-*.avi
-*.zip
-*.sql
-*.rar
-*.bak
-*.doc
-*.docx
-*.xls
-*.xlsx
-.osp/*
+.idea/
+/docs/
+/part/
+.osp/
+/wp-content/uploads/
+/wp-content/themes/*
+!/wp-content/themes/featherlab/
+!/wp-includes/*
+!/wp-admin/*
 
-*.ttf
-*.woff
-*.woff2
+*.*
+!*.php
+!*.css
+!*.js
 
-wp-config.php
-
-wp-config*.php
-
-//themes/*
-!//themes/uokm/
-
-/part/*
+*config*
+*yandex*
+*google*
+*mailru*
